# podman-spawner

./: CHANGELOG.md  Dockerfile  README.md  justfile  podman-intro.md  pyproject.toml
config-files/: .bashrc
data/: compile_all.bash  start.bash
pod/: cli.py  config.py  tools.py
scripts/: .welcome  _welcome_  both  build  run  run.bash  sae  see  start.bash  test-0.1  test-0.3a  test-0.3b  test-0.4  test1  test2  test3  test4  test5  test6  test7  test8  test9
src/pod/: cli.py  config.py  port.py  tools.py
src/pod/assets/defaults/pod-build/: Dockerfile  Makefile  config.toml
src/pod/assets/defaults/pod-build/home-dir/: .bashrc
src/podman_spawner/: cli.py  config.py  port.py  tools.py
src/podman_spawner/assets/defaults/pod-build/: Dockerfile  prepare_build.bash
src/podman_spawner/assets/defaults/pod-build/home-dir/: .bashrc  .on_build.bash  on_build.bash
tests/: test_tools.py
