[project]
name = "pod"
version = "0.1.0"
description = "Gestionnaire de containeurs pour les SAÉ"
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colored-messages>=0.1.0",
    "fire >= 0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]

[project.scripts]
pod = 'pod.cli:main'

[build-system]
requires = ["uv_build>=0.9.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "pod"
